--- a/assignment3/app/src/main/res/values/strings.xml
+++ b/assignment3/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">assignment-3</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="back_button">BACK</string>
 </resources>
